# Face_Mask_Detector

./: .gitignore  CMakeLists.txt  README.md  myproject.ini
assets/: nginx-sites-enabled-default
docs/: requirement_nginx.md
docs/html/: 5b3f4b86af26___8py.html  5b3f4b86af26___8py.js  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  app_8py.html  app_8py.js  app__config_8py.html  app__config_8py.js  base64_8h.html  base64_8h.js  base64_8h_source.html  bbox__tracker_8cpp.html  bbox__tracker_8h.html  bbox__tracker_8h_source.html  cgi__callback_8cpp.html  cgi__callback_8cpp.js  cgi__callback_8h.html  cgi__callback_8h_source.html  class_bbox_tracker-members.html  class_bbox_tracker.html  class_bbox_tracker.js  class_c_v_p_o_s_t_callback-members.html  class_c_v_p_o_s_t_callback.html  class_c_v_p_o_s_t_callback.js  class_cross_call_back-members.html  class_cross_call_back.html  class_cross_call_back.js  class_entry_check-members.html  class_entry_check.html  class_entry_check.js  class_entry_check_1_1_on_cross_call_back-members.html  class_entry_check_1_1_on_cross_call_back.html  class_entry_check_1_1_on_cross_call_back.js  class_face_mask_detector-members.html  class_face_mask_detector.html  class_face_mask_detector.js  class_j_s_o_n_cgi_get_callback-members.html  (+124 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  (+39 more)
lib/paddle-lite/include/: paddle_lite_factory_helper.h  paddle_use_kernels.h  paddle_use_ops.h
src/: CMakeLists.txt  base64.h  bbox_tracker.cpp  bbox_tracker.h  cgi_callback.cpp  cgi_callback.h  cgi_server.cpp  cgi_server.h  data_structures.h  default_settings.cpp  face_mask_detector.cpp  face_mask_detector.h  main.cpp  mask_detector.cpp  mask_detector.h  mysql_connection.cpp  mysql_connection.h  pipeline.cpp  pipeline.h
src/html/: showCVImage.html
src/html/templates/: dashboard.html  index.html
src/html/web/: app.py  app_config.py  database.py  models.py  readme.md
src/html/web/migrations/versions/: 5b3f4b86af26_.py
src/html/web/static/css/: dashboard.css  liveStream.css
src/html/web/static/js/: dashBoard.js  liveStream.js
src/html/web/templates/: dashboard.html  liveStream.html
test/: CMakeLists.txt  bbox_tracker_tests.cpp  face_detector_tests.cpp  face_mask_detector_tests.cpp  mask_detector_tests.cpp
tmp/: abseil-cpp-populate-gitclone.cmake  abseil-cpp-populate-gitupdate.cmake  eigen-populate-gitclone.cmake  eigen-populate-gitupdate.cmake
